err/pypptx.err
Listing '.'...
Listing './bin'...
Compiling './bin/vba_extract.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PIL'...
Listing './lib/python3.5/site-packages/PIL/.libs'...
Listing './lib/python3.5/site-packages/Pillow-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.11.egg-info'...
Listing './lib/python3.5/site-packages/XlsxWriter-1.0.2.dist-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pptx'...
Listing './lib/python3.5/site-packages/pptx/chart'...
Listing './lib/python3.5/site-packages/pptx/compat'...
Listing './lib/python3.5/site-packages/pptx/dml'...
Listing './lib/python3.5/site-packages/pptx/enum'...
Listing './lib/python3.5/site-packages/pptx/opc'...
Listing './lib/python3.5/site-packages/pptx/oxml'...
Listing './lib/python3.5/site-packages/pptx/oxml/chart'...
Listing './lib/python3.5/site-packages/pptx/oxml/dml'...
Listing './lib/python3.5/site-packages/pptx/oxml/parts'...
Listing './lib/python3.5/site-packages/pptx/oxml/shapes'...
Listing './lib/python3.5/site-packages/pptx/parts'...
Listing './lib/python3.5/site-packages/pptx/shapes'...
Listing './lib/python3.5/site-packages/pptx/templates'...
Listing './lib/python3.5/site-packages/pptx/text'...
Listing './lib/python3.5/site-packages/pypptx'...
Compiling './lib/python3.5/site-packages/pypptx/__init__.py'...
***   File "./lib/python3.5/site-packages/pypptx/__init__.py", line 81
    print i, layout.name
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pypptx-0.2.2.egg-info'...
Listing './lib/python3.5/site-packages/python_pptx-0.5.7.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/xlsxwriter'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
